--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,12 +12,12 @@
     <div class="row">
         <div class="col-md-6 login-form-1">
             <h3>Login for  blog user</h3>
-            <form>
+            <form action="/login" method="post">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                    <input type="text" class="form-control" placeholder="Your Email *" id="user" required th:value="${user.email}" th:field="${user.email}" />
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                    <input type="password" class="form-control" placeholder="Your Password *" id="password" required th:value="${user.passwordHash}" th:field="${user.passwordHash}" />
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btnSubmit" value="Login" />
@@ -29,5 +29,6 @@
         </div>
     </div>
 </div>
+<script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
 </body>
 </html>
