--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .line-clamp-3 {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
+        }
+    </style>
 </head>
 <body>
-<h1>Welcome to blog</h1>
+<main class="container-fluid">
+
+    <section>
+        <h1 class="text-center">Home</h1>
+
+        <div class="row sm-10">
+            <div th:each="post : ${posts}">
+                <div class="shadow p-3 mb-12 bg-body-tertiary rounded">
+                    <h4>
+                        <a th:href="@{/posts/{id}(id=${post.getId()})}" th:text="${post.getTitle()}"></a>
+                    </h4>
+                    <div>
+                        Author:
+                        <strong th:text="${post.getAuthor().getFirstName() + ' ' + post.getAuthor().getMiddleName() + ' ' + post.getAuthor().getLastName()}"></strong>
+                    </div>
+                    <p class="line-clamp-3" th:text="${post.getSummary()}"></p>
+                </div>
+            </div>
+        </div>
+
+        <div  th:if="${posts.totalPages > 0}" th:each="pageNumber : ${pages}">
+            <a th:href="@{/index(size=${posts.size}, page=${pageNumber})}"
+               th:text="${pageNumber}"
+               th:class="${pageNumber==posts.number + 1} ? active"></a>
+        </div>
+    </section>
+</main>
 </body>
 </html>
