--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,9 +8,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-<div class="container login-container">
+<div class="container login-container  ">
     <div class="row">
-        <div class="col-md-6 login-form-1">
+        <div class="col-md-6 login-form-1 mt-3 bg-light text-center border border-warning">
             <h3>Login for  blog user</h3>
             <form action="/login" method="post">
                 <div class="form-group">
@@ -18,6 +18,9 @@
                 </div>
                 <div class="form-group">
                     <input type="password" class="form-control" placeholder="Your Password *" id="password" required th:value="${user.passwordHash}" th:field="${user.passwordHash}" />
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox"> Remember me</label>
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btnSubmit" value="Login" />
@@ -29,6 +32,5 @@
         </div>
     </div>
 </div>
-<script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
 </body>
 </html>
