--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,42 +9,43 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        .line-clamp-3 {
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 3;
-        }
-    </style>
 </head>
 <body>
-<main class="container-fluid">
+<main class="container-fluid inline">
 
     <section>
         <h1 class="text-center">Home</h1>
-
-        <div class="row sm-10">
-            <div th:each="post : ${posts}">
-                <div class="shadow p-3 mb-12 bg-body-tertiary rounded">
+        <div class="feed-text px-2">
+            <a type="button" class="btn btn-warning" href="/show-add-form">Add new Post</a>
+        </div>
+        <div class="lg-10">
+            <div th:each="post : ${posts}" class="d-flex align-items-center justify-content-center">
+                <div class=" mt-3 col-sm-8  bg-light text-center border border-warning  ">
                     <h4>
                         <a th:href="@{/posts/{id}(id=${post.getId()})}" th:text="${post.getTitle()}"></a>
                     </h4>
                     <div>
                         Author:
-                        <strong th:text="${post.getAuthor().getFirstName() + ' ' + post.getAuthor().getMiddleName() + ' ' + post.getAuthor().getLastName()}"></strong>
+                        <strong th:text="${post.getAuthor().getFirstName()}"></strong>
+                    </div>
+                    <div>
+                        Published At:
+                        <strong th:text="${post.getPublishedAt()}"></strong>
                     </div>
                     <p class="line-clamp-3" th:text="${post.getSummary()}"></p>
                 </div>
             </div>
         </div>
+        <ul class="pagination pagination-lg d-flex justify-content-around mt-3 ">
+            <div th:if="${posts.totalPages > 0}" th:each="pageNumber : ${pages}">
+                <a th:href="@{/index(size=${posts.size}, page=${pageNumber})}"
+                   th:text="${pageNumber}"
+                   th:class="${pageNumber==posts.number + 1} ? active"></a>
+            </div>
+        </ul>
 
-        <div  th:if="${posts.totalPages > 0}" th:each="pageNumber : ${pages}">
-            <a th:href="@{/index(size=${posts.size}, page=${pageNumber})}"
-               th:text="${pageNumber}"
-               th:class="${pageNumber==posts.number + 1} ? active"></a>
-        </div>
     </section>
+
 </main>
 </body>
 </html>
