--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
             <div th:each="post : ${posts}" class="d-flex align-items-center justify-content-center">
                 <div class=" mt-3 col-sm-8  bg-light text-center border border-warning  ">
                     <h4>
-                        <a th:href="@{/posts/{id}(id=${post.getId()})}" th:text="${post.getTitle()}"></a>
+                        <a th:href="@{/post/{id}(id=${post.getId()})}" th:text="${post.getTitle()}"></a>
                     </h4>
                     <div>
                         Author:
