--- a/src/main/resources/templates/notFound.html
+++ b/src/main/resources/templates/notFound.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Post Detail</title>
+    <title>Not Found</title>
 </head>
 <body>
-
+<h1>Khong tim thay bai dang</h1>
 </body>
 </html>
